--- a/src/index.html
+++ b/src/index.html
@@ -1,118 +1,182 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="./index.css">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cambialo</title>
+  <link rel="stylesheet" href="./index.css" />
   <script type="module" src="./index.js"></script>
 </head>
+
 <body>
-    <!-- Cabecera -->
-    <header class="header-container">
-      <div class="logo-container">
-        <img class="logo" src="img/logotipo3.png" alt="Logotipo" />
-      </div>
-      <div class="link-container">
-        <a class="contact-link" href="#">Contacto</a>
-        <button class="shop-btn">
-          <a class="shop-link" href="#">Tienda</a>
-        </button>
-      </div>
-    </header>
+  <!-- Cabecera -->
+  <header class="header-container">
+    <div class="logo-container">
+      <img class="logo" src="assets/logotipo-500.png" alt="Logotipo" />
+    </div>
+    <div class="link-container">
+      <a class="contact-link" href="#">Contacto</a>
+      <button class="shop-btn">
+        <a class="shop-link" href="#">Tienda</a>
+      </button>
+    </div>
+  </header>
+  <!-- Fin Cabecera -->
 
-    <section class="hero-section">
-      <div class="hero-container">
-        <div class="form-container">
-          <form>
-              <div class="field">
-                <label class="label">Nombre</label>
-                <div class="control">
-                  <input class="input" type="text" placeholder="Tu nombre">
-                </div>
-              </div>
-
-              <div class="field">
-                <label class="label">Username</label>
-                <div class="control">
-                  <input class="input" type="text" placeholder="Crea tu ususario">
-                </div>
-              </div>
-
-              <div class="field">
-                <label class="label">Email</label>
-                <div class="control">
-                  <input class="input" type="email" placeholder="Tu email">
-                </div>
-              </div>
-
-              <div class="field">
-                <label class="label">Mensaje</label>
-                <div class="control">
-                  <textarea class="textarea" placeholder="Tu mensaje..."></textarea>
-                </div>
-              </div>
-
-              <div class="field">
-                <div class="control">
-                  <label class="">
-                    <input type="checkbox">
-                    Estoy de acuerdo con los <a href="#">terminos y condiciones.</a>
-                  </label>
-                </div>
-              </div>
-
-              <div class="field">
-                <div class="control">
-                  <button class="button" onclick="location.reload()">Enviar</button>
-                </div>
-              </div>
-            </div>
-          </form>
+  <!-- Hero section -->
+  <section class="hero-section">
+    <div class="form-container">
+      <form>
+        <div class="name-field">
+          <label class="label">Nombre</label>
+          <div class="control">
+            <input class="input" type="text" placeholder="Tu nombre" />
+          </div>
         </div>
-        <div class="hero-text">
-          <h1 class="hero-title">
-            ¿Conoces la nueva manera de comprar sin dinero?
-          </h1>
-          <h2 class="hero-subtitle">
-            Con cambialo, nace la nueva plataforma de intercambio que busca dar
-            una nueva vida a lo que no usas
-          </h2>
-        </div>
-      </div>
-    </section>
 
-    <!--Información relevante-->
-    <div class="info-contenedor">
-      <div class="">
-        <h4 class="">Somos expertos en seguridad</h4>
-        <p>
+        <div class="user-field">
+          <label class="label">Username</label>
+          <div class="control">
+            <input class="input" type="text" placeholder="Crea tu ususario" />
+          </div>
+        </div>
+
+        <div class="email-field">
+          <label class="label">Email</label>
+          <div class="control">
+            <input class="input" type="email" placeholder="Tu email" />
+          </div>
+        </div>
+
+        <div class="message-field">
+          <label class="label">Mensaje</label>
+          <div class="control">
+            <textarea class="input textarea" placeholder="Tu mensaje..."></textarea>
+          </div>
+        </div>
+
+        <div class="terms-field">
+          <div class="control">
+            <label class="">
+              <input type="checkbox" required />
+              Estoy de acuerdo con los
+              <a href="#">terminos y condiciones.</a>
+            </label>
+          </div>
+        </div>
+
+        <div class="field">
+          <div class="control">
+            <button class="button" onclick="location.reload()">
+              Enviar
+            </button>
+          </div>
+        </div>
+      </form>
+    </div>
+    <div class="hero-text">
+      <h1 class="hero-title">
+        ¿Conoces la nueva manera de comprar sin dinero?
+      </h1>
+      <div class="flex">
+        <div class="white-space"></div>
+        <h2 class="hero-subtitle">
+          Con cambialo, nace la nueva plataforma de intercambio que busca dar
+          una nueva vida a lo que no usas.
+        </h2>
+      </div>
+    </div>
+    </div>
+  </section>
+
+  <!-- Fin Hero section -->
+
+  <!--Información relevante-->
+  <section class="info-contenedor">
+    <div class="card-container flex">
+      <div class="card-value">
+        <h4 class="card-title">Somos expertos en seguridad</h4>
+        <p class="card-text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed dui
           nunc. Sed ornare viverra egestas. Integer a ante sit amet dui egestas
           fringilla.
         </p>
       </div>
 
-      <div class="">
-        <h4 class="">Actualización semanal</h4>
-        <p>
+      <div class="card-value">
+        <h4 class="card-title">Actualización semanal</h4>
+        <p class="card-text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed dui
           nunc. Sed ornare viverra egestas. Integer a ante sit amet dui egestas
           fringilla.
         </p>
       </div>
 
-      <div class="">
-        <h4 class="">Servicio de Incidencias</h4>
-        <p>
+      <div class="card-value">
+        <h4 class="card-title">Servicio de Incidencias</h4>
+        <p class="card-text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed dui
           nunc. Sed ornare viverra egestas. Integer a ante sit amet dui egestas
           fringilla.
         </p>
       </div>
     </div>
+  </section>
 
-    <!--footer-->
+  <!-- Fin Información relevante-->
+
+  <!-- Productos destacados -->
+
+  <section class="product-section">
+
+    <div class="product-container">
+      <div class="product-row flex">
+        <div class="card-product flex">
+          <img class="product-img" src="assets/zapatos-500.jpg" alt="zapatos de tacón amarillos">
+          <div class="product-description">
+            <h3 class="product-title">Zapatos de tacón</h3>
+            <p class="product-text">Estos son unos zaptos amarillos que no pasan desapercibidos, como nuevos.</p>
+            <button class="shop-btn"><a href="">Cambialo!</a></button>
+          </div>
+        </div>
+        <div class="card-product flex">
+          <img class="product-img" src="assets/iphone-500.jpg" alt="iPhone 11 púrpura">
+          <div class="product-description">
+            <h3 class="product-title">iPhone 11 púrpura</h3>
+            <p class="product-text">iPhone directamente traido de china, de antes de la pandemia, como nuevo a estrenar.
+              AAA.</p>
+            <button class="shop-btn"><a href="">Cambialo!</a></button>
+          </div>
+        </div>
+      </div>
+        <div class="product-row flex">
+          <div class="card-product flex">
+            <img class="product-img" src="assets/lavadora1x1.jpg" alt="lavadora">
+            <div class="product-description">
+              <h3 class="product-title">Lavadora LG</h3>
+              <p class="product-text">Lavadora blanca casi sin uso, garantía vigente. Acepto xbox y playstation.</p>
+              <button class="shop-btn"><a href="">Cambialo!</a></button>
+            </div>
+          </div>
+          <div class="card-product flex">
+            <img class="product-img" src="assets/bici1x1.jpg" alt="bicicleta blanca">
+            <div class="product-description">
+              <h3 class="product-title">Bicicleta con cesta</h3>
+              <p class="product-text">Bicicleta con cesta incluida, no tiene ruedas de apoyo, cubierta recién
+                cambiada.</p>
+                <button class="shop-btn"><a href="">Cambialo!</a></button>
+            </div>
+          </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Fin Productos destacados -->
+
+
+  <!--footer-->
 </body>
+
 </html>
