--- a/src/index.html
+++ b/src/index.html
@@ -174,6 +174,37 @@
   </section>
 
   <!-- Fin Productos destacados -->
+  
+ <!-- donde encontrarnos -->
+  <section class="social-container">
+    <div class="contenedor-rrss">
+      <div class="rrss">
+        <a href="#"><i class="rrss-icon fab fa-twitter"></i></a>
+        <a href="#"><i class="rrss-icon fab fa-facebook-f"></i></a>
+        <a href="#"><i class="rrss-icon fab fa-instagram"></i></a>
+      </div>
+    </div>
+
+
+    <div class="contenedor-contact flex">
+      <div class="info-contact">
+        <h3 class="title-contact">¿Dónde encontrarnos?</h3>
+        <ul class="list-contact">
+          <li><i class="contact-icon fas fa-phone"></i> 902-781-369</li>
+          <li><i class="contact-icon fas fa-envelope"></i> intrepidibex@gmail.com</li>
+          <li><i class="contact-icon fas fa-arrow-right"></i> Calle La X, 13. Madrid, España.</li>
+        </ul>
+      </div>
+
+      <div class="contenedor-map">
+        <div class="img-contact">
+          <img class="map-contact"
+            src="https://map.viamichelin.com/map/carte?map=viamichelin&z=10&lat=40.42483&lon=-3.68506&width=550&height=382&format=png&version=latest&layer=background&debug_pattern=.*"
+            alt="mapa de madrid">
+        </div>
+      </div>
+    </div>
+  </section>
 
 
   <!--footer-->
