--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cambialo</title>
     <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
     <script type="module" src="./index.js"></script>
   </head>
 
@@ -25,7 +29,6 @@
     </header>
 
     <section class="hero-section">
-
       <div class="hero-text">
         <h1 class="hero-title">
           ¿Conoces la nueva manera de comprar sin dinero?
@@ -38,57 +41,57 @@
           </h2>
         </div>
       </div>
-        <form id="form" class="form-container">
-          <div class="name-field">
-            <label class="label">Nombre</label>
-            <div class="control">
-              <input class="input" type="text" placeholder="Tu nombre" />
-            </div>
+      <form id="form" class="form-container">
+        <div class="name-field">
+          <label class="label">Nombre</label>
+          <div class="control">
+            <input class="input" type="text" placeholder="Tu nombre" />
           </div>
+        </div>
 
-          <div class="user-field">
-            <label class="label">Username</label>
-            <div class="control">
-              <input class="input" type="text" placeholder="Crea tu ususario" />
-            </div>
+        <div class="user-field">
+          <label class="label">Username</label>
+          <div class="control">
+            <input class="input" type="text" placeholder="Crea tu ususario" />
           </div>
+        </div>
 
-          <div class="email-field">
-            <label class="label">Email</label>
-            <div class="control">
-              <input class="input" type="email" placeholder="Tu email" />
-            </div>
+        <div class="email-field">
+          <label class="label">Email</label>
+          <div class="control">
+            <input class="input" type="email" placeholder="Tu email" />
           </div>
+        </div>
 
-          <div class="message-field">
-            <label class="label">Mensaje</label>
-            <div class="control">
-              <textarea
-                class="input textarea"
-                placeholder="Tu mensaje..."
-              ></textarea>
-            </div>
+        <div class="message-field">
+          <label class="label">Mensaje</label>
+          <div class="control">
+            <textarea
+              class="input textarea"
+              placeholder="Tu mensaje..."
+            ></textarea>
           </div>
+        </div>
 
-          <div class="terms-field">
-            <div class="control">
-              <label class="">
-                <input type="checkbox" required />
-                Estoy de acuerdo con los
-                <a class="conditions-link" href="#">términos y condiciones.</a>
-              </label>
-            </div>
+        <div class="terms-field">
+          <div class="control">
+            <label class="">
+              <input type="checkbox" required />
+              Estoy de acuerdo con los
+              <a class="conditions-link" href="#">términos y condiciones.</a>
+            </label>
           </div>
+        </div>
 
-          <div class="field">
-            <div class="control">
-              <button class="btn" onclick="location.reload()"><a href="#">Enviar</a></button>
-            </div>
+        <div class="field">
+          <div class="control">
+            <button class="btn" onclick="location.reload()">
+              <a href="#">Enviar</a>
+            </button>
           </div>
-        </form>
-      </div>
+        </div>
+      </form>
     </section>
-
 
     <section class="info-contenedor">
       <div class="card-container">
@@ -123,66 +126,66 @@
 
     <section id="product" class="product-section">
       <div class="product-container">
-          <div class="card-product flex">
-              <img
-                class="product-img"
-                src="assets/zapatos-500.jpg"
-                alt="zapatos de tacón amarillos"
-              />
-              <div class="product-description">
-                <h3 class="product-title">Zapatos de tacón</h3>
-                <p class="product-text">
-                  Estos son unos zaptos amarillos que no pasan desapercibidos,
-                  como nuevos.
-                </p>
-                <button class="btn"><a href="">Cambialo!</a></button>
-              </div>
+        <div class="card-product flex">
+          <img
+            class="product-img"
+            src="assets/zapatos-500.jpg"
+            alt="zapatos de tacón amarillos"
+          />
+          <div class="product-description">
+            <h3 class="product-title">Zapatos de tacón</h3>
+            <p class="product-text">
+              Estos son unos zaptos amarillos que no pasan desapercibidos, como
+              nuevos.
+            </p>
+            <button class="btn"><a href="">Cambialo!</a></button>
           </div>
-          <div class="card-product flex">
-            <img
-              class="product-img"
-              src="assets/iphone-500.jpg"
-              alt="iPhone 11 púrpura"
-            />
-            <div class="product-description">
-              <h3 class="product-title">iPhone 11 púrpura</h3>
-              <p class="product-text">
-                iPhone directamente traido de china, de antes de la pandemia,
-                como nuevo a estrenar. AAA.
-              </p>
-              <button class="btn"><a href="">Cambialo!</a></button>
-            </div>
+        </div>
+        <div class="card-product flex">
+          <img
+            class="product-img"
+            src="assets/iphone-500.jpg"
+            alt="iPhone 11 púrpura"
+          />
+          <div class="product-description">
+            <h3 class="product-title">iPhone 11 púrpura</h3>
+            <p class="product-text">
+              iPhone directamente traido de china, de antes de la pandemia, como
+              nuevo a estrenar. AAA.
+            </p>
+            <button class="btn"><a href="">Cambialo!</a></button>
           </div>
-          <div class="card-product flex">
-            <img
-              class="product-img"
-              src="assets/lavadora1x1.jpg"
-              alt="lavadora"
-            />
-            <div class="product-description">
-              <h3 class="product-title">Lavadora LG</h3>
-              <p class="product-text">
-                Lavadora blanca casi sin uso, garantía vigente. Acepto xbox y
-                playstation.
-              </p>
-              <button class="btn"><a href="">Cambialo!</a></button>
-            </div>
+        </div>
+        <div class="card-product flex">
+          <img
+            class="product-img"
+            src="assets/lavadora1x1.jpg"
+            alt="lavadora"
+          />
+          <div class="product-description">
+            <h3 class="product-title">Lavadora LG</h3>
+            <p class="product-text">
+              Lavadora blanca casi sin uso, garantía vigente. Acepto xbox y
+              playstation.
+            </p>
+            <button class="btn"><a href="">Cambialo!</a></button>
           </div>
-          <div class="card-product flex">
-            <img
-              class="product-img"
-              src="assets/bici1x1.jpg"
-              alt="bicicleta blanca"
-            />
-            <div class="product-description">
-              <h3 class="product-title">Bicicleta con cesta</h3>
-              <p class="product-text">
-                Bicicleta con cesta incluida, no tiene ruedas de apoyo, cubierta
-                recién cambiada.
-              </p>
-              <button class="btn"><a href="">Cambialo!</a></button>
-            </div>
+        </div>
+        <div class="card-product flex">
+          <img
+            class="product-img"
+            src="assets/bici1x1.jpg"
+            alt="bicicleta blanca"
+          />
+          <div class="product-description">
+            <h3 class="product-title">Bicicleta con cesta</h3>
+            <p class="product-text">
+              Bicicleta con cesta incluida, no tiene ruedas de apoyo, cubierta
+              recién cambiada.
+            </p>
+            <button class="btn"><a href="">Cambialo!</a></button>
           </div>
+        </div>
       </div>
     </section>
 
@@ -195,7 +198,7 @@
           <a href="#"><i class="rrss-icon fab fa-instagram"></i></a>
         </div>
       </div>
-      <hr>
+      <hr />
       <div class="contact-container">
         <div class="info-contact">
           <h3 class="title-contact">¡Contáctanos!</h3>
@@ -213,13 +216,18 @@
         </div>
 
         <div class="map-container">
-          <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d224494.30680203543!2d-16.42607446700346!3d28.457749010572844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xc41cceccc254171%3A0x43111473d277e52e!2sSanta%20Cruz%20de%20Tenerife!5e0!3m2!1ses!2ses!4v1638901557498!5m2!1ses!2ses" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          <iframe
+            class="map"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d224494.30680203543!2d-16.42607446700346!3d28.457749010572844!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xc41cceccc254171%3A0x43111473d277e52e!2sSanta%20Cruz%20de%20Tenerife!5e0!3m2!1ses!2ses!4v1638901557498!5m2!1ses!2ses"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+          ></iframe>
         </div>
       </div>
     </section>
 
     <footer class="footer-container">
-
       <div class="link-container">
         <div class="desktop-bg">
           <ul class="footer-list">
@@ -251,7 +259,7 @@
 
       <div class="footer-flex">
         <a href="#">
-          <img class="logo" src="assets/logotipo-500.png" alt="">
+          <img class="logo" src="assets/logotipo-500.png" alt="" />
         </a>
         <h4 class="footer-title">Cambialo!</h4>
         <p class="footer-rights">Copyright © 2021, Cámbialo ©</p>
