Cambios textuales y poner icon en terms-conditions

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
             <div class="flex ">
                 <div class="white-space "></div>
                 <h2 class="hero-subtitle ">
-                    Con cambialo, nace la nueva plataforma de intercambio que busca dar una nueva vida a lo que no usas.
+                    Con Cámbialo, nace la nueva plataforma de intercambio que busca dar una nueva vida a lo que no usas.
                 </h2>
             </div>
         </div>
@@ -112,7 +112,8 @@
             <div class="card-value ">
                 <h4 class="card-title ">Compromiso</h4>
                 <p class="card-text ">
-                    Nuestro objetivo es ayudarlo a realizar sus cambios fácilmente. Comprometidos mejorar nuestro servicio cada día para que intercambiar y darle una segunda vida a cosas que ya no necesitas.</p>
+                    Nuestro objetivo es ayudarlo a realizar sus cambios fácilmente. Comprometidos mejorar nuestro servicio cada día para que intercambiar y darle una segunda vida a cosas que ya no necesitas.
+                </p>
             </div>
 
             <div class="card-value ">
@@ -166,7 +167,7 @@
                 <div class="product-description ">
                     <h3 class="product-title ">Bicicleta eléctrica plegable</h3>
                     <p class="product-text ">
-                        Me la regalaron por Navidad y no la uso casi nunca. Batería de 24V y 7,8 Ah. Está valorada en unos 1000€, me interesa un PC Gam
+                        Me la regalaron por Navidad y no la uso casi nunca. Batería de 24V y 7,8 Ah. Está valorada en unos 1000€, me interesa un PC Gaming.
                     </p>
                     <button class="btn "><a href=" ">Cambiar</a></button>
                 </div>
