--- a/src/terms-conditions.html
+++ b/src/terms-conditions.html
@@ -7,6 +7,7 @@
     <title>Términos y Condiciones</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
+    <link rel="shortcut icon" href="./assets/logotipo-icon.ico">
 </head>
 
 <body>
