--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
             <img class="logo " src="assets/logotipo-500.png " alt="Logotipo " />
         </div>
         <nav class="flex " id="navbar ">
-            <a class="contact-link " href="# ">Contacto</a>
+            <a class="contact-link " href="#contact-container ">Contacto</a>
             <button class="btn "><a href="https://las-cabras-intrepidas.github.io/Despliegue_Web/index.html">Tienda</a></button>
         </nav>
     </header>
@@ -54,7 +54,7 @@
             <div class="email-field ">
                 <label class="label ">Correo electrónico*</label>
                 <div class="control ">
-                    <input class="input " type="email " placeholder=" email@example " />
+                    <input class="input " type="email " placeholder=" ejemplo@email.com " />
                 </div>
             </div>
 
@@ -98,7 +98,7 @@
         </form>
     </section>
 
-    <section class="info-contenedor ">
+    <section class="info-contenedor " id="info-contenedor">
 
         <div class="card-container ">
 
@@ -186,7 +186,7 @@
             </div>
         </div>
         <hr />
-        <div class="contact-container">
+        <div class="contact-container" id="contact-container">
             <div class="info-contact">
                 <h3 class="title-contact">¡Contáctanos!</h3>
                 <ul class="list-contact">
@@ -219,7 +219,7 @@
                         <a href="#product ">PRODUCTOS</a>
                     </li>
                     <li class="footer-link ">
-                        <a href="#form ">CONTACTO</a>
+                        <a href="#contact-container ">CONTACTO</a>
                     </li>
                 </ul>
             </div>
@@ -232,7 +232,7 @@
                         <a class="conditions-link " href="./terms-conditions.html" target="_blank">AVISO LEGAL</a>
                     </li>
                     <li class="footer-link ">
-                        <a href="# ">CONÓCENOS</a>
+                        <a href="#info-contenedor ">CONÓCENOS</a>
                     </li>
                 </ul>
             </div>
