--- a/src/index.html
+++ b/src/index.html
@@ -126,7 +126,7 @@
         </div>
     </section>
 
-    <section id="product " class="product-section ">
+    <section id="products " class="product-section ">
         <div class="product-container ">
 
             <div class="card-product flex ">
@@ -216,7 +216,7 @@
                         <a href="">INICIO</a>
                     </li>
                     <li class="footer-link ">
-                        <a href="#product ">PRODUCTOS</a>
+                        <a href="#products ">PRODUCTOS</a>
                     </li>
                     <li class="footer-link ">
                         <a href="#contact-container ">CONTACTO</a>
