Corecciones textuales y links

--- a/src/index.html
+++ b/src/index.html
@@ -210,19 +210,7 @@
 
     <footer class="footer-container ">
         <div class="link-container ">
-            <div class="desktop-bg ">
-                <ul class="footer-list ">
-                    <li class="footer-link ">
-                        <a href="">INICIO</a>
-                    </li>
-                    <li class="footer-link ">
-                        <a href="#products ">PRODUCTOS</a>
-                    </li>
-                    <li class="footer-link ">
-                        <a href="#contact-container ">CONTACTO</a>
-                    </li>
-                </ul>
-            </div>
+
             <div class="desktop-bg ">
                 <ul class="footer-list ">
                     <li class="footer-link ">
@@ -236,13 +224,28 @@
                     </li>
                 </ul>
             </div>
+
+            <div class="desktop-bg ">
+                <ul class="footer-list ">
+                    <li class="footer-link ">
+                        <a href="">INICIO</a>
+                    </li>
+                    <li class="footer-link ">
+                        <a href="#products ">PRODUCTOS</a>
+                    </li>
+                    <li class="footer-link ">
+                        <a href="#contact-container ">CONTACTO</a>
+                    </li>
+                </ul>
+            </div>
+
         </div>
 
         <div class="footer-flex ">
             <a href="# ">
                 <img class="logo " src="assets/logotipo-500.png " alt=" " />
             </a>
-            <h4 class="footer-title ">Cámbialo </h4>
+            <h4 class="footer-title ">Cámbialo - </h4>
             <p class="footer-rights ">Copyright © 2021, Cámbialo ©</p>
         </div>
     </footer>
