--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,10 @@
         <div>
             <img class="logo " src="assets/logotipo-500.png " alt="Logotipo " />
         </div>
+
         <nav class="flex " id="navbar ">
             <a class="contact-link " href="#contact-container ">Contacto</a>
-            <button class="btn "><a href="https://las-cabras-intrepidas.github.io/Despliegue_Web/index.html">Tienda</a></button>
+            <button class="btn "><a href="https://las-cabras-intrepidas.github.io/Despliegue_Web/index.html">Ver productos</a></button>
         </nav>
     </header>
 
@@ -103,7 +104,7 @@
         <div class="card-container ">
 
             <div class="card-value ">
-                <h4 class="card-title ">Atencion al cliente</h4>
+                <h4 class="card-title ">Atención al cliente</h4>
                 <p class="card-text ">
                     Contacta con nosotros para resolver cualquier tipo de incidencia o duda. Estamos a tu disposición las 24 horas del día. Puedes acceder a nuestros datos de contacto <a href=" ">aquí</a>.
                 </p>
