--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 
         <nav class="flex " id="navbar ">
             <a class="contact-link " href="#contact-container ">Contacto</a>
-            <button class="btn "><a href="https://las-cabras-intrepidas.github.io/Despliegue_Web/index.html">Ver productos</a></button>
+            <button class="btn "><a href="https://las-cabras-intrepidas.github.io/Despliegue_Web/index.html">Catálogo</a></button>
         </nav>
     </header>
 
