--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
                     <p class="product-text ">
                         Tacones amarillos como los de la Rosalía en su último videoclip. Poco uso.
                     </p>
-                    <button class="btn "><a href=" ">Cambiar</a></button>
+                    <button class="btn "><a href="https://las-cabras-intrepidas.github.io/Despliegue_Web/product.html ">Cambiar</a></button>
                 </div>
             </div>
 
@@ -148,7 +148,7 @@
                     <p class="product-text ">
                         1 año de uso, tiene un pequeño razguño en la parte superior trasera. Me gustaría cambiarlo por una consola de nueva generación.
                     </p>
-                    <button class="btn "><a href=" ">Cambiar</a></button>
+                    <button class="btn "><a href="https://las-cabras-intrepidas.github.io/Despliegue_Web/product.html ">Cambiar</a></button>
                 </div>
             </div>
 
@@ -159,7 +159,7 @@
                     <p class="product-text ">
                         Lavadora color plata con garantía vigente. Capacidad de 12kg. La quiero cambiar porque me he comprado una más grande.
                     </p>
-                    <button class="btn "><a href=" ">Cambiar</a></button>
+                    <button class="btn "><a href="https://las-cabras-intrepidas.github.io/Despliegue_Web/product.html ">Cambiar</a></button>
                 </div>
             </div>
 
@@ -170,7 +170,7 @@
                     <p class="product-text ">
                         Me la regalaron por Navidad y no la uso casi nunca. Batería de 24V y 7,8 Ah. Está valorada en unos 1000€, me interesa un PC Gaming.
                     </p>
-                    <button class="btn "><a href=" ">Cambiar</a></button>
+                    <button class="btn "><a href="https://las-cabras-intrepidas.github.io/Despliegue_Web/product.html ">Cambiar</a></button>
                 </div>
             </div>
 
@@ -181,9 +181,9 @@
         <div class="rrss-container ">
             <h3 class="title-contact ">¿Dónde estamos?</h3>
             <div class="icon-container ">
-                <a href="# "><i class="rrss-icon fab fa-facebook-square "></i></a>
-                <a href="# "><i class="rrss-icon fab fa-instagram "></i></a>
-                <a href="# "><i class="rrss-icon fab fa-twitter-square "></i></a>
+                <a href="https://www.facebook.com/Cambialocom-111304798084313/" target="_blank"><i class="rrss-icon fab fa-facebook-square "></i></a>
+                <a href="https://www.instagram.com/cambialo_es/" target="_blank"><i class="rrss-icon fab fa-instagram "></i></a>
+                <a href="https://twitter.com/CambialoES" target="_blank"><i class="rrss-icon fab fa-twitter-square "></i></a>
             </div>
         </div>
         <hr />
@@ -232,7 +232,7 @@
                         <a href="">INICIO</a>
                     </li>
                     <li class="footer-link ">
-                        <a href="#products ">PRODUCTOS</a>
+                        <a href="https://las-cabras-intrepidas.github.io/Despliegue_Web/product.html">PRODUCTOS</a>
                     </li>
                     <li class="footer-link ">
                         <a href="#contact-container ">CONTACTO</a>
